prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo-prod
  namespace: jettisonproj
  labels:
    app.kubernetes.io/instance: rollouts-demo-prod
    app.kubernetes.io/version: 660835a1d90a2e332cdb9cd8c878bf87a909fa25
spec:
  replicas: 10
  strategy:
    canary:
      analysis:
        # Run analysis in the background as canary scales up
        templates:
        - templateName: success-rate
        startingStep: 4 # delay starting analysis run until setWeight: 20%
        args:
        - name: service-name
          value: "rollouts-demo-prod-.*"
      canaryService: rollouts-demo-prod-canary-service # our created canary service
      stableService: rollouts-demo-prod-stable-service # our created stable service
      dynamicStableScale: true # dynamically scale down the old versions
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: rollouts-demo-prod-https-route # our created httproute
            namespace: jettisonproj
      steps:
      # 0) Set canary scale to 20% of spec.replicas without changing traffic weight
      # (supported only with trafficRouting)
      - setCanaryScale:
          weight: 20
      # 1) Run integration test on the canary service
      - analysis:
          templates:
          - templateName: integration-test
          args:
          - name: service-name
            value: rollouts-demo-prod-canary-service
      # 2) Pause 1m after integation test
      - pause:
          duration: 1m
      # 3) Sets the ratio of canary ReplicaSet to 20%
      - setWeight: 20
      # 4) Set canary scale to match the canary traffic weight (default behavior)
      - setCanaryScale:
          matchTrafficWeight: true
      # 5) Pause for 12 minutes while canary analysis runs in the background
      - pause:
          duration: 12m
      # 6) Increase the ratio of canary ReplicaSet to 50%
      - setWeight: 50
      # 7) Pause for 12 minutes while canary analysis runs in the background
      - pause:
          duration: 12m
      # 8) Increase the ratio of canary ReplicaSet to 100%
      - setWeight: 100
      # 9) Pause for 1m after full scale up
      - pause:
          duration: 1m
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo-prod
  template:
    metadata:
      labels:
        app: rollouts-demo-prod
    spec:
      containers:
        - name: rollouts-demo
          image: ghcr.io/jettisonproj/rollouts-demo:660835a1d90a2e332cdb9cd8c878bf87a909fa25
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
