prod/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-prod-canary-service
  namespace: jettisonproj
  labels:
    backstage.io/kubernetes-id: rollouts-demo-prod
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo-prod
